display visualizer on jsx

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
   </head>
 
   <body>
+    <div id="app"></div>
     <div id="tree-wrapper"></div>
+    <script src="react/JSXVisualizer/index.js" type="module"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.7/d3.min.js"
+      integrity="sha512-MbgT+83UxCH6sDPhdRyAqCvG+93y1xm6SIC/1T15gWsbkC2bjGqHVWepfhPMocnEOhgXBtZCOxHmwq0XPsqSGQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
   </body>
-  <script src="react/index.js"></script>
 </html>
